changed collors and menu text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="list-unstyled pull-down">
                     <li>
                         <a class="" href="https://github.com/oakcool?tab=repositories">
-                            <p class="accent">code</p>
+                            <p class="accent">oakideas</p>
                             <p>projects</p>
                         </a>
                     </li>
