I believe I have fixed the issue with the random work

--- a/index.html
+++ b/index.html
@@ -51,12 +51,39 @@
         </div>
     </div>
 
-    <script data-main="Scripts/config.js" src="Scripts/require.js"></script>
+    <!--<script data-main="Scripts/config.js" src="Scripts/require.js"></script>-->
 
-
+    <script src="Scripts/jquery-2.2.3.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
+    <script src="Scripts/knockout-3.4.0.js"></script>
+    <script src="Scripts/AreaViewModel.js"></script>
+    <script src="Scripts/ProjectViewModel.js"></script>
+    <script src="Scripts/OakcoolViewModel.js"></script>
+    <script src="Scripts/MainViewModel.js"></script>
     <script>
 
+        var mainViewModel = new oak.MainViewModel();
+        ko.applyBindings(mainViewModel);
 
+        //for each element that is classed as 'pull-down', set its margin-top to the difference between its own height and the height of its parent
+        $('.pull-down3_5ths').each(function () {
+            var $this = $(this);
+            var bodyHeight = $("body").innerHeight();
+
+            //alert(totalHeight);
+            $this.css('margin-top', (bodyHeight * 3) / 5);
+        });
+
+        $('.pull-down').each(function () {
+            var $this = $(this);
+            var columnHeight = $this.height();        
+            var bodyHeight = $("body").innerHeight();
+            var imageHeight = $this.height();
+            var totalHeight = bodyHeight - (bodyHeight * .7);
+
+            //alert(totalHeight);
+            $this.css('margin-top', totalHeight);
+        });
 
     </script>
 
